16_DevSecOps_Pipeline/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-api
  namespace: devsecops
  labels:
    app: notes-api
spec:
  type: ClusterIP
  selector:
    app: notes-api
  ports:
    - name: http
      port: 80
      targetPort: http
